# Misc-Tools

bpm/: index.js  package-lock.json  package.json
news/: ask_ai.py  getnews.py  pyproject.toml
news/prompts/: system.txt
src/bjola/: __init__.py  timeutil.py
tentools/tentools-master/: .gitignore  .travis.yml  LICENSE  Pipfile  README.md
tentools/tentools-master/src/tools/: daylog.py  dayskel.py  dummy_util.py  most_repetitive_log_line.py  notes_strike_selected.applescript  slug  station-logs  type_current_time.applescript
tentools/tentools-master/src/tools/process-canary/: process_canary.py
tentools/tentools-master/src/tools/test/: test_daylog.py  test_dummy_util.py
